# ble-touch

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml  sdkconfig.defaults
.cargo/: config.toml
ble-touch-bin/: Cargo.toml  build.rs  sdkconfig.defaults
ble-touch-bin/src/: ble.rs  flash.rs  main.rs  serial.rs  storage.rs
ble-touch-lib/: Cargo.toml
ble-touch-lib/src/: cmd.rs  coords.rs  hid.rs  lib.rs  settings.rs
src/: ble.rs  cmd.rs  coords.rs  gesture.rs  lib.rs  main.rs  serial.rs  settings.rs  storage.rs
