[package]
name = "ble-touch-bin"
version = "0.1.0"
edition = "2021"

[features]
default = []
esp32 = []

[dependencies]
ble-touch-lib = { path = "../ble-touch-lib" }
esp-idf-svc = { version = "0.52", features = ["binstart"] }
esp32-nimble = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[build-dependencies]
embuild = "0.33"
